# claudewiki

./: .gitignore  README.md
apps/desktop-shell/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/desktop-shell/docs/plans/: 2026-04-04-ui-transform-phase0-1-2-design.md
apps/desktop-shell/src/: App.tsx  globals.css
apps/desktop-shell/src-tauri/: Cargo.toml
apps/desktop-shell/src-tauri/src/: cc_switch_terminal.rs  main.rs
apps/desktop-shell/src/components/: BrowserDrawer.tsx  ErrorBoundary.tsx  (+4 more)
backlog/: phase1-deferred.md
docs/: audit-lessons.md  performance-report.md  warwolf-provider-settings-design-review.md  warwolf-provider-settings-wireframes-and-tasks.md
docs/clawwiki/: infra-design.md
docs/design/: technical-design.md
docs/design/modules/: 01-skill-engine.md  02-wiki-explorer.md  03-chat-tab.md  04-wechat-kefu.md  05-schema-system.md  06-graph-view.md  07-dashboard.md  08-settings-modal.md
docs/design/ui/: component-spec.md  design-tokens.md  ia-layout.md
docs/desktop-shell/: README.md  cloud-managed-integration.md
docs/desktop-shell/architecture/: overview.md
docs/desktop-shell/plans/: 2026-04-10-claudewiki-wechat-customer-service-ingress-plan.md  2026-04-14-claudewiki-wechat-ecosystem-knowledge-engine-plan.md  2026-04-24-phase-2-closure.md  2026-04-24-phase-2-readiness-audit.md  2026-04-24-phase-2-to-4-long-run-checklist.md  README.md
docs/desktop-shell/specs/: 2026-04-10-claudewiki-wechat-customer-service-ingress-design.md  2026-04-17-connect-wechat-kefu-interaction-design.md  2026-04-17-embedded-browser-panel-unified-design.md  README.md
docs/desktop-shell/tokens/: design-tokens.md  functional-tokens.md
docs/desktop-shell/wireframes/: claudewiki-wireframe.html  connect-wechat-wireframe.html
docs/plans/: 2026-04-13-audit-fixes.md  2026-04-14-knowledge-graph-rowboat-v2.md
docs/superpowers/plans/: 2026-04-06-desktop-shell-architecture-refactor-plan.md  2026-04-06-desktop-shell-documentation-record-system-plan.md
docs/superpowers/specs/: 2026-04-06-desktop-shell-architecture-refactor-design.md  2026-04-06-desktop-shell-documentation-record-system-design.md
memory/: corrections.jsonl  evolution-log.md  learned-rules.md  observations.jsonl
rust/: Cargo.toml  README.md
rust/crates/desktop-core/: Cargo.toml
rust/crates/desktop-core/src/: agentic_loop.rs  codex_auth.rs  codex_broker.rs  lib.rs  openai_compat_streaming.rs  prerequisites.rs  protocol_codegen.rs  provider_hub.rs  skill_router.rs  system_prompt.rs  wiki_maintainer_adapter.rs
rust/crates/desktop-core/src/ask_context/: binding.rs  mod.rs
rust/crates/desktop-core/src/url_ingest/: canonical.rs  content_hash.rs  dedupe.rs  mod.rs  recent.rs
rust/crates/desktop-core/src/wechat_ilink/: account.rs  dedupe.rs  desktop_handler.rs  handlers.rs  ingest_config.rs  mod.rs  monitor.rs
rust/crates/desktop-core/src/wechat_kefu/: callback.rs  desktop_handler.rs  mod.rs  pipeline.rs  types.rs
rust/crates/desktop-server/: Cargo.toml
rust/crates/desktop-server/src/: lib.rs  main.rs
rust/crates/desktop-server/src/handlers/: mod.rs  wechat.rs  wiki_reports.rs  wiki_tasks.rs
rust/crates/desktop-server/src/routes/: desktop.rs  internal.rs  mod.rs  wechat.rs  wiki.rs
rust/crates/server/: Cargo.toml
rust/crates/wiki_ingest/: Cargo.toml
rust/crates/wiki_ingest/src/: defuddle_worker.js  docx.rs  extractor.rs  html_to_md.rs  image.rs  lib.rs  markitdown_worker.py  package.json  pdf.rs  pptx.rs  url.rs  video.rs  voice.rs  wechat_fetch.rs  wechat_fetcher.py
rust/crates/wiki_maintainer/: Cargo.toml
rust/crates/wiki_store/: Cargo.toml
rust/crates/wiki_store/src/: lib.rs
rust/crates/wiki_store/src/provenance/: mod.rs  types.rs
tasks/: plan.md  todo.md
(+189 files in other folders)
