[package]
name = "desktop-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "desktop-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
desktop-core = { path = "../desktop-core" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[lints]
workspace = true
